SANC-72: Fix calendar event block title truncate

--- a/src/app/_components/common/calendar/calendar-view.module.scss
+++ b/src/app/_components/common/calendar/calendar-view.module.scss
@@ -91,11 +91,3 @@
   text-transform: uppercase;
   letter-spacing: 0.5px;
 }
-
-.eventContentContainer {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  gap: 1rem;
-  width: 100%;
-}
